# trellis

./: .gitignore  CLAUDE.md  COMPLETED.md  Cargo.toml  Makefile  README.md  REFERENCE.md  TODO.md  deny.toml
.claude/memory/: MEMORY.md  trellis_phase1_framework.md
DRAFTS/: trellis_spec_family_normalization_plan.md  unified-ledger-requirements-matrix.md  unified_ledger_companion.md  unified_ledger_core.md
crates/trellis-admission-formspec/: Cargo.toml
crates/trellis-admission-formspec/src/: lib.rs
crates/trellis-admission-wos/: Cargo.toml
crates/trellis-admission-wos/src/: lib.rs
crates/trellis-cddl/: Cargo.toml
crates/trellis-cddl/src/: lib.rs
crates/trellis-cli/: Cargo.toml
crates/trellis-cli/src/: main.rs
crates/trellis-conformance/: Cargo.toml
crates/trellis-conformance/src/: lib.rs  model_checks.rs
crates/trellis-conformance/tests/: cross_adapter_admission.rs  store_parity.rs
crates/trellis-conformance/tests/common/: mod.rs
crates/trellis-core/: Cargo.toml
crates/trellis-cose/: Cargo.toml
crates/trellis-export/: Cargo.toml
crates/trellis-formspec-signature/: Cargo.toml
crates/trellis-formspec-signature/src/: lib.rs
crates/trellis-hpke/: Cargo.toml
crates/trellis-hpke/src/: lib.rs
crates/trellis-hpke/tests/: append_004_byte_match.rs
crates/trellis-interop-c2pa/: Cargo.toml  README.md
crates/trellis-interop-c2pa/src/: lib.rs
crates/trellis-interop-did/: Cargo.toml
crates/trellis-interop-scitt/: Cargo.toml
crates/trellis-interop-vc/: Cargo.toml
crates/trellis-server/: Cargo.toml
crates/trellis-server-ports/: Cargo.toml
crates/trellis-server-ports/src/: lib.rs
crates/trellis-server/src/: append.rs  artifacts.rs  composition.rs  event_repository.rs  export_profile.rs  http.rs  lib.rs  openapi.rs  state.rs  test_harness.rs
crates/trellis-server/tests/: dependency_baseline.rs
crates/trellis-store-memory/: Cargo.toml
crates/trellis-store-postgres/: Cargo.toml
crates/trellis-store-postgres-async/: Cargo.toml
crates/trellis-store-postgres-async/src/: bundle_publications.rs  lib.rs  migrations.rs  pool.rs
crates/trellis-store-postgres-async/tests/: bundle_publications.rs  migrations.rs  parity.rs
crates/trellis-store-postgres-shared/: Cargo.toml
crates/trellis-store-postgres/src/: lib.rs  migrations.rs
crates/trellis-types/: Cargo.toml
crates/trellis-verify/: Cargo.toml
crates/trellis-verify-wos/: Cargo.toml
crates/trellis-verify/src/: certificate.rs  certificate_proof.rs  correction.rs  erasure.rs  export.rs  interop_sidecar.rs  kinds.rs  lib.rs  merkle.rs  open_clocks.rs  parse.rs  supersession.rs  tests.rs  types.rs  user_attestation.rs  util.rs  validator.rs
crates/trellis-verify/tests/: certificate_proof_trait.rs
fixtures/: README.md
fixtures/vectors/: README.md  _pending-invariants.toml  _pending-model-checks.toml  _pending-projection-drills.toml
ratification/: README.md  ratification-checklist.md  ratification-evidence.md
ratification/g5-package/: README.md  allowed-readset-files.txt  allowed-readset-sha256.txt  archive-sha256.txt
reference/: README.md
scripts/: check-http-api-schema.py  check-specs.py  check-vector-renumbering.py  check-verifier-isolation.sh  check_cross_runtime_parity.py  check_signed_acts_projection_parity.py  test_check_specs.py  test_check_vector_renumbering.py  test_check_verifier_isolation.py
specs/: README.md  assurance-traceability.md  canonical-cbor-profile.md  cross-reference-map.md  disclosure-manifest.md  projection-runtime-discipline.md  ratification-checklist.md  ratification-evidence.md  trellis-agreement.md  trellis-core.md  trellis-http-api.schema.json  trellis-operational-companion.md  trellis-requirements-matrix.md  trust-profiles.md  wos-trellis-verification.md
specs/archive/: cross-reference-map-coverage-analysis.md
specs/assurance/: assurance-traceability.md  ratification-checklist.md  ratification-evidence.md
specs/companion/: formspec-signature-corroboration.md
specs/core/: _task10-removed.tmp.md  _task11-removed.tmp.md  shared-ledger-binding.md  trellis-core.md  unified-ledger-companion-requirements-matrix.md  unified-ledger-requirements-matrix.md
specs/export/: disclosure-manifest.md  export-verification-package.md
specs/forms/: forms-respondent-history.md
specs/operations/: monitoring-witnessing.md
specs/projection/: projection-runtime-discipline.md
specs/ratification/: ratification-evidence.md
specs/trust/: key-lifecycle-operating-model.md  trust-profiles.md
specs/workflow/: workflow-governance-provenance.md
thoughts/: audit-2026-04-23-design-docs-vs-specs-and-code.md  audit-2026-04-23-thoughts-specs.md  handoff-prompt.md  product-vision.md
thoughts/adr/: 0001-0004-phase-1-mvp-principles-and-format-adrs.md  0005-crypto-erasure-evidence.md  0006-key-class-taxonomy.md  0007-certificate-of-completion-composition.md  0008-interop-sidecar-discipline.md  0009-hpke-crate-selection.md  0010-user-content-attestation-primitive.md  0011-profile-id-value-sub-registry.md  0012-rkaf-finding-anchoring.md  0015-anchor-adapter-deferred.md
thoughts/model-checks/: evidence.toml  tr-core-001.md  tr-core-020.md  tr-core-023.md  tr-core-025.md  tr-core-046.md  tr-core-050.md  tr-op-061.md  tr-op-111.md
thoughts/plans/: 2026-05-07-extract-trellis-verify-wos.md
thoughts/research/: 2026-04-10-unified-ledger-technology-survey.md  ledger-risk-reduction.md  unified_implementation_proposal.md
thoughts/reviews/: 2026-04-10-expert-panel-unified-ledger-review.md  (+1 more)
trellis-py/: .gitignore  ALLOWED-READ-MANIFEST.txt  ATTESTATION.md  BYTE-MATCH-REPORT.json  DISCREPANCY-LOG.txt  README.md  pyproject.toml
trellis-py/src/trellis_py/: __init__.py  _cbor_canonical.py  append.py  codec.py  conformance.py  constants.py  export_zip.py  verify.py  verify_wos.py
trellis-py/tests/: test_certificate_of_completion.py  test_interop_c2pa_byte_oracle.py  test_signed_acts_manifest_verifier.py  test_tamper_vectors.py  test_user_content_attestation_vectors.py  test_verify_erasure_evidence.py  test_verify_export.py  test_verify_intake.py  test_verify_wos.py
(+1022 files in other folders)
