[workspace]
members = [
    "crates/trellis-types",
    "crates/trellis-cddl",
    "crates/trellis-core",
    "crates/trellis-server-ports",
    "crates/trellis-export-writer",
    "crates/trellis-service-client",
    "crates/trellis-server",
    "crates/trellis-verify-wos",
    "crates/trellis-witness-registry",
    "crates/trellis-store-memory",
    "crates/trellis-store-postgres-async",
    "crates/trellis-conformance",
    "crates/trellis-cli",
    "crates/trellis-interop-c2pa",
    "crates/trellis-interop-did",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
