[package]
name = "trellis-admission-formspec"
version.workspace = true
edition.workspace = true
description = "Formspec-aware Trellis admission adapter"
license.workspace = true

[dependencies]
async-trait = "0.1"
integrity-verify = { path = "../../../integrity-stack/crates/integrity-verify" }
serde_json = "1"
stack-common-error = { path = "../../../stack-common/crates/stack-common-error" }
trellis-server-ports = { path = "../trellis-server-ports" }
trellis-types = { path = "../trellis-types" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
