[package]
name = "trellis-admission-wos"
version.workspace = true
edition.workspace = true
description = "WOS-aware Trellis admission adapter"
license.workspace = true

[dependencies]
async-trait = "0.1"
integrity-verify = { path = "../../../integrity-stack/crates/integrity-verify" }
serde_json = "1"
stack-common-error = { path = "../../../stack-common/crates/stack-common-error" }
trellis-server-ports = { path = "../trellis-server-ports" }
trellis-types = { path = "../trellis-types" }
wos-events = { path = "../../../work-spec/crates/wos-events" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
