[package]
name = "trellis-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
trellis-cddl = { path = "../trellis-cddl" }
trellis-core = { path = "../trellis-core" }
trellis-store-memory = { path = "../trellis-store-memory" }
integrity-verify = { path = "../../../integrity-stack/crates/integrity-verify" }
trellis-verify-wos = { path = "../trellis-verify-wos" }
