[package]
name = "trellis-conformance"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
trellis-core = { path = "../trellis-core" }
trellis-store-memory = { path = "../trellis-store-memory" }

[dev-dependencies]
ciborium = "0.2"
proptest = "1.6"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
trellis-cddl = { path = "../trellis-cddl" }
trellis-export = { path = "../trellis-export" }
trellis-types = { path = "../trellis-types" }
trellis-verify = { path = "../trellis-verify" }
toml = "0.8"
