[package]
name = "trellis-hpke"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
test-vectors = ["integrity-hpke/test-vectors"]

[dependencies]
integrity-hpke = { path = "../../../integrity-stack/crates/integrity-hpke" }

[dev-dependencies]
hpke = { version = "=0.13.0" }
