[package]
name = "trellis-server"
version.workspace = true
edition.workspace = true
description = "Trellis substrate HTTP service"
license.workspace = true

[features]
default = []
# Public fixture-backed state for cross-crate integration tests (dev-deps only).
test-harness = []

[dependencies]
async-trait = "0.1"
axum = "0.8"
ciborium = "0.2"
hex = "0.4"
hkdf = "0.12"
http = "1"
integrity-cbor = { path = "../../../integrity-stack/crates/integrity-cbor", features = ["json"] }
integrity-verify = { path = "../../../integrity-stack/crates/integrity-verify" }
jsonwebtoken = "9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls"] }
sha2 = "0.10"
stack-common-auth = { path = "../../../stack-common/crates/stack-common-auth" }
stack-common-error = { path = "../../../stack-common/crates/stack-common-error" }
stack-common-http = { path = "../../../stack-common/crates/stack-common-http" }
stack-common-idempotency = { path = "../../../stack-common/crates/stack-common-idempotency", default-features = false, features = ["replay"] }
stack-common-ops = { path = "../../../stack-common/crates/stack-common-ops" }
time = { version = "0.3", features = ["formatting"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
trellis-admission-formspec = { path = "../trellis-admission-formspec" }
trellis-admission-wos = { path = "../trellis-admission-wos" }
trellis-cddl = { path = "../trellis-cddl" }
trellis-core = { path = "../trellis-core" }
trellis-export-writer = { path = "../trellis-export-writer" }
trellis-server-ports = { path = "../trellis-server-ports" }
trellis-service-client = { path = "../trellis-service-client" }
trellis-store-postgres-async = { path = "../trellis-store-postgres-async" }
trellis-types = { path = "../trellis-types" }
trellis-verify-wos = { path = "../trellis-verify-wos" }
utoipa = "5"
# Domain vocabulary needed only by the composition root; generic modules are
# blocked from importing wos-events by the boundary gate.
wos-events = { path = "../../../work-spec/crates/wos-events" }

[dev-dependencies]
integrity-bundle = { path = "../../../integrity-stack/crates/integrity-bundle" }
integrity-seam = { path = "../../../integrity-stack/crates/integrity-seam" }
tower = { version = "0.5", features = ["util"] }
wos-events = { path = "../../../work-spec/crates/wos-events" }
