[package]
name = "trellis-store-postgres-async"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sqlx = { version = "0.8", default-features = false, features = ["postgres", "runtime-tokio-rustls", "uuid", "json", "migrate"] }
stack-common-idempotency = { path = "../../../stack-common/crates/stack-common-idempotency", default-features = false }
stack-common-postgres = { path = "../../../stack-common/crates/stack-common-postgres", default-features = false, features = ["migrations", "pool"] }
thiserror = "1"
trellis-types = { path = "../trellis-types" }

[dev-dependencies]
tempfile = "3.14"
tokio = { version = "1", features = ["full", "macros", "test-util"] }
