[package]
name = "trellis-store-postgres"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
postgres = "0.19"
postgres-native-tls = "0.5"
native-tls = "0.2"
r2d2 = "0.8"
r2d2_postgres = "0.18"
trellis-core = { path = "../trellis-core" }
trellis-types = { path = "../trellis-types" }

[dev-dependencies]
tempfile = "3.14"
