[package]
name = "trellis-verify"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ciborium = "0.2"
ed25519-dalek = "2.1"
sha2 = "0.10"
trellis-cose = { path = "../trellis-cose" }
trellis-types = { path = "../trellis-types" }
zip = { version = "8.5.1", default-features = false, features = ["deflate"] }

[dev-dependencies]
trellis-cddl = { path = "../trellis-cddl" }
